# salon-flow

./: .env.example  .eslintrc.js  .gcloudignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  AI_AGENTS_MASTER_PLAN.md  AI_MODULE_IMPLEMENTATION_PLAN.md  AI_SERVICE_IMPLEMENTATION_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATION_TEST_REPORT.md  Makefile  PERFORMANCE_OPTIMIZATION_REPORT.md  QA_INTEGRATION_TEST_REPORT.md  README.md  check_page.js  check_routing.js  cloudbuild-ai.yaml  cloudbuild-manager.yaml  cloudbuild-notification.yaml  cloudbuild-owner.yaml  cloudbuild.yaml  cost_optimized_design.md  coverage.json  debug_login.js  debug_pwas.js  debug_render.js  deploy_owner_pwa.sh  docker-compose.dev.yml  docker-compose.yml  get_main.js  integration_test_results.json  jest.config.js  package-lock.json  package.json  playwright.config.ts  playwright.debug.config.ts  (+11 more)
.a0proj/: agent_skill_mapping.json  agents.json  development_roadmap.json  project.json  project_context.json  variables.env
.a0proj/agents/: ai_engineer.json  backend_developer.json  data_engineer.json  devops_engineer.json  frontend_developer.json  qa_engineer.json  solutions_architect.json
.a0proj/instructions/: coding-standards.md  git-workflow.md  testing-strategy.md  twilio-omnichannel.md
.a0proj/memory/: index.faiss  index.pkl  knowledge_import.json
.github/workflows/: deploy-cloudrun.yml  deploy.yml  lint.yml  test.yml
apps/client/: index.html  package.json
apps/manager/: Dockerfile  (+2 more)
deploy/: .env.production  DEPLOYMENT.md  ai-service.yaml  deploy.sh  service.yaml  setup-upstash.sh
docs/: AI_NATIVE_UI_IMPLEMENTATION.md  AI_OWNER_DASHBOARD_INTEGRATION_PLAN.md  ARCHITECTURE.md  ARCHITECTURE_MULTI_TENANT_TWILIO.md  AUTONOMOUS_AGENT_ARCHITECTURE.md  AUTONOMOUS_AGENT_BACKEND_INFRASTRUCTURE.md  AUTONOMOUS_AGENT_IMPLEMENTATION_PLAN.md  DEPLOYMENT.md  ENHANCED_BILLING_SYSTEM.md  FRONTEND_ROADMAP.md  ONBOARDING_FLOW.md  OWNER_DASHBOARD_DESIGN_SPEC.md  OWNER_DASHBOARD_PROPOSAL.md  OWNER_PWA_BUILD_PLAN.md
scripts/: add_staff_api.py  dev_ai.sh  dev_setup.sh  find_owner.py  generate_mock.py  list_db.py  seed_db.py  seed_production.py
tests/: __init__.py  conftest.py  setup.ts
(+473 files in other folders)
